[package]
name = "blackcube-rs"
version = "1.0.2"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = [ "full" ] }
reqwest = { version = "0.12.12", features = [ "json" ] }
serde = "1.0.218"
serde_json = "1.0.139"
mongodb = { version = "3.2.2", features = [ "sync" ] }
toml = "0.8.20"
bson = "2.13.0"
anyhow = "1.0.96"
url = "2.5.4"
rust-s3 = "0.36.0-beta.2"
mime = "0.3.17"
poise = "0.6.1"
image = "0.25.5"
